--- a/app/src/main/res/layout/activity_stats_home.xml
+++ b/app/src/main/res/layout/activity_stats_home.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.gundersonstudios.dndstatstracker.StatsHome">
+    tools:context="com.gundersonstudios.dndstatstracker.activity.MainCharacterSheetActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
