--- a/app/src/main/res/layout/fragment_health.xml
+++ b/app/src/main/res/layout/fragment_health.xml
@@ -5,25 +5,119 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
-    <EditText
-        android:hint="Enter Character HP Here"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:inputType="numberDecimal"
-        android:maxLines="25"
-        android:ems="10"
-        android:id="@+id/healthTextBox"
-        android:layout_gravity="center"
-        android:clickable="false"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"
-        android:layout_weight="1"
-        android:textAlignment="gravity"
-        android:gravity="center"
-        android:textSize="20dp"
-        android:scrollbars="vertical"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="1">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/total_health"
+                android:layout_margin="5dp"
+                android:textColor="@android:color/black"
+                android:textSize="20dp"/>
+
+            <EditText
+                android:id="@+id/totalHp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Character Total HP"
+                android:layout_margin="5dip"
+                android:layout_weight="1"
+                android:inputType="numberDecimal"
+                android:gravity="center"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="1">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/damage_reduction"
+                android:layout_margin="5dp"
+                android:textColor="@android:color/black"
+                android:textSize="20dp"/>
+
+            <EditText
+                android:id="@+id/damageResistance"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Damage Resistance"
+                android:layout_margin="5dip"
+                android:layout_weight="1"
+                android:inputType="numberDecimal"
+                android:gravity="center"/>
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/current_health"
+            android:layout_margin="5dp"
+            android:textColor="@android:color/black"
+            android:textSize="20dp"/>
+
+        <EditText
+            android:hint="Enter Character HP Here"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:inputType="numberDecimal"
+            android:maxLines="25"
+            android:ems="10"
+            android:id="@+id/currentHp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1"
+            android:textAlignment="gravity"
+            android:gravity="center"
+            android:textSize="20dp"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/nonlethal_damage"
+            android:layout_margin="5dp"
+            android:textColor="@android:color/black"
+            android:textSize="20dp"/>
+
+        <EditText
+            android:id="@+id/nonlethalDamage"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="5dip"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:hint="Nonlethal Damage"
+            android:inputType="numberDecimal" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:orientation="horizontal"
@@ -123,17 +217,5 @@
             android:textSize="20dp" />
 
     </LinearLayout>
-
-    <Button
-        android:id="@+id/viewHealthLog"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:background="@android:color/background_dark"
-        android:text="View Health Log"
-        android:textSize="20dp"
-        android:textAllCaps="false"
-        android:textColor="@android:color/background_light"
-        />
 
 </LinearLayout>
