--- a/app/src/main/res/menu/menu_stats_home.xml
+++ b/app/src/main/res/menu/menu_stats_home.xml
@@ -6,4 +6,14 @@
         android:title="@string/action_settings"
         android:orderInCategory="100"
         app:showAsAction="never" />
+
+    <item android:id="@+id/add_health_frag"
+        android:title="@string/add_health_frag"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
+    <item android:id="@+id/add_spells_frag"
+        android:title="@string/add_spells_frag"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
 </menu>
